@@ -1,2 +1,2 @@
-Sun Oct 20 23:11:02 GMT 2024
-Sun Oct 20 20:11:02 -03 2024
+Wed Oct 23 01:11:18 GMT 2024
+Tue Oct 22 22:11:18 -03 2024
